changed package name because taken on npm

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "buffer64",
+  "name": "buff64",
   "version": "0.1.0",
   "description": "A starting point to create ES6 module for browser",
-  "repository": "jonathanlurie/buffer64",
-  "moduleName": "buffer64",
+  "repository": "jonathanlurie/buff64",
+  "moduleName": "buff64",
   "entry": "src/main.js",
-  "main": "dist/buffer64.cjs.js",
-  "commonjs": "dist/buffer64.cjs.js",
-  "module": "dist/buffer64.module.js",
-  "browser": "dist/buffer64.umd.js",
+  "main": "dist/buff64.cjs.js",
+  "commonjs": "dist/buff64.cjs.js",
+  "module": "dist/buff64.module.js",
+  "browser": "dist/buff64.umd.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
